# ansible-collection-customapi-inventory

./: .galaxy-ignore  .gitignore  README.md  galaxy.yml  pyproject.toml
meta/: runtime.yml
plugins/inventory/: custom_api_inventory.py
tests/: conftest.py
tests/integration/: ansible.cfg
tests/integration/inventory/: test_inventory.customapi.yml
tests/integration/inventory/group_vars/: all.yml  label_blockchain_type_cosmos.yml
tests/integration/inventory/host_vars/: cosmos-validator-01-prod-eu.yml
tests/unit/: test_custom_api_inventory.py
